--- a/src/java/com/mosis/reportes/reporteEmpleado.jrxml
+++ b/src/java/com/mosis/reportes/reporteEmpleado.jrxml
@@ -10,11 +10,11 @@
 	<title>
 		<band height="79" splitType="Stretch">
 			<staticText>
-				<reportElement x="200" y="14" width="144" height="45" uuid="7b8c625e-e5b6-4e07-aa8c-ae086b25bc71"/>
+				<reportElement x="226" y="24" width="104" height="23" uuid="7b8c625e-e5b6-4e07-aa8c-ae086b25bc71"/>
 				<textElement>
 					<font size="16" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Empleados]]></text>
+				<text><![CDATA[TAGPatrol]]></text>
 			</staticText>
 		</band>
 	</title>
